tests/compile_fail/handle_scope_lifetime_3.stderr
error[E0499]: cannot borrow `scope1` as mutable more than once at a time
  --> tests/compile_fail/handle_scope_lifetime_3.rs:14:22
   |
9  |   let mut context_scope = v8::ContextScope::new(&mut scope1, context);
   |                                                 ----------- first mutable borrow occurs here
...
14 |     v8::Integer::new(&mut scope1, 123)
   |                      ^^^^^^^^^^^ second mutable borrow occurs here
15 |   };
   |   - first borrow might be used here, when `_scope2` is dropped and runs the `Drop` code for type `v8::scope2::ScopeStorage`
